--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "embla-carousel-react": "^8.0.0-rc22",
     "next": "14.1.0",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.1",
+    "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6"
   },
