--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.1",
     "react-spring": "^9.7.3",
