--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "embla-carousel-react": "^8.0.0-rc22",
+    "lottie-react": "^2.4.0",
     "next": "14.1.0",
     "react": "^18",
     "react-countup": "^6.5.0",
